--- a/public/lands.html
+++ b/public/lands.html
@@ -160,7 +160,10 @@ function loadDoc() {//АЯКС ЗАПРОС ДЛЯ ПОИСКА ЛАНДА
           //document.getElementById("demo").innerHTML = splitted;//Массив в значениями Ланда
          pushArray(splitted);
          document.getElementById("typeid").value=splitted[0];
-
+         document.getElementById("demo").innerHTML="found";
+        }
+        else {
+          document.getElementById("demo").innerHTML="empty";
         }
       };
       xhttp.open("POST", "http://127.0.0.1:8080/api/v1/findingLand", true);
@@ -233,7 +236,7 @@ function postArray(alfaX, alfaY){
 
             arr[i*10+j]=oCells[j].getElementsByTagName("input")[0].value;
           //  document.getElementById("demo").innerHTML=oCells[2].getElementsByTagName("input")[0].value;
-            document.getElementById("demo").innerHTML=i+" "+j;
+            document.getElementById("demo").innerHTML="saved";
            }
 
     }
